Fix navbar overflow while loading

--- a/sass/components/_navbar.scss
+++ b/sass/components/_navbar.scss
@@ -185,6 +185,7 @@ nav.navigation {
       box-shadow: 0 1px 3px #DCDCDC;
       align-content: flex-start;
       flex-direction: row;
+      overflow: hidden;
 
       .navigation--top--mobile__heading {
         display: flex;
